@@ -57,6 +57,7 @@ All (GUI):
 
 wxMSW:
 
+- Fixed crash with ownerdrawn menu items accelerators (Perry Miller)
 - wxFileDialog respects absence of wxCHANGE_DIR flag under NT (Brad Anderson).
 - Switching page of a hidden notebook doesn't lose focus (Jamie Gadd).
 - Removed wxImageList *GetImageList(int) const.
